My Local properties

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Aug 04 19:30:17 CST 2018
-sdk.dir=C\:\\Users\\May\\AppData\\Local\\Android\\Sdk
+#Mon Aug 06 18:44:08 SGT 2018
+ndk.dir=C\:\\Users\\isaia\\SDK\\ndk-bundle
+sdk.dir=C\:\\Users\\isaia\\SDK
