Finished Text Translation Added Translation, lang source and dir for Speech to add:Speech Recognition Algo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,9 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
-        <activity android:name=".SpeechTranslation"
-            android:theme="@style/Hermes"></activity>
+        <activity
+            android:name=".SpeechTranslation"
+            android:theme="@style/Hermes" />
     </application>
 
 </manifest>
