--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 *.iml
 .gradle
-API.java
+app/src/main/java/com/translator/translator/api/API.java
 /local.properties
 local.properties
 /.idea/libraries
