--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Aug 06 18:44:08 SGT 2018
-ndk.dir=C\:\\Users\\isaia\\SDK\\ndk-bundle
-sdk.dir=C\:\\Users\\isaia\\SDK
+#Mon Sep 10 02:15:30 CST 2018
+sdk.dir=C\:\\Users\\Peds\\AppData\\Local\\Android\\Sdk
